--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,3 @@
 patreon: CharlesPikachu
-custom: https://github.com/CharlesPikachu/Games/tree/master/.github/alipay.JPG
+ko_fi: charlespikachu
+custom: https://github.com/CharlesPikachu/Games/tree/master/.github/pictures/alipay.JPG
